--- a/packages/web-worker/package.json
+++ b/packages/web-worker/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "build": "rollup -c",
         "test": "echo \"Error: no test specified\"",
-        "audit": "node ../../scripts/audit/index.js",
+        "audit": "echo no audit found",
+        "audit:V1": "node ../../scripts/audit/index.js",
         "preversion": "npm run build && npm run test && npm run audit",
         "version": "npm run build"
     },
