--- a/packages/fdc3/package.json
+++ b/packages/fdc3/package.json
@@ -18,7 +18,8 @@
     "scripts": {
         "build": "tsc -p ./tsconfig.json && rollup -c",
         "test": "echo \"Error: no test specified\" && exit 0",
-        "audit": "node ../../scripts/audit/index.js",
+        "audit": "echo no audit found",
+        "audit:V1": "node ../../scripts/audit/index.js",
         "preversion": "npm run build && npm run test && npm run audit",
         "version": "npm run build"
     },
